# core-anti-fraud

./: .flake8  README.md  api.py  handler.py  main.py  pyproject.toml
app/application/: commands.py
app/application/use_cases/: check_name_analyser.py
app/application/use_cases.py/: check_address_analyser.py
app/infrastructure/: logger.py
app/interfaces/: commons.py  settings.py  transaction_request_analyser.py
app/routes/: healthcheck.py  transaction_request_analyser.py
app/utils/: settings.py
