[tool.poetry]
name = "core-anti-fraud"
version = "0.1.0"
description = ""
authors = ["Becker <rodrigo.beckermore@gmail.com>"]
readme = "README.md"
packages = [{include = "core_anti_fraud"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
transitions = "^0.9.0"
fastapi-utils = "^0.2.1"
httpx = "^0.25.0"
uvicorn = "^0.23.2"
mangum = "^0.17.0"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"
mypy = "^1.5.1"
safety = "^2.3.5"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
